# Learning

langchain_exe/: main.ipynb  pyproject.toml
langgraph_ex/: langg.ipynb  main.py  pyproject.toml
rag/: 0_pdf_loader.py  agentic_rag.py  api.py  config.py  pdf_loader.py  pyproject.toml  rag_ex.py  web_loadrer.py
rag/chroma.db/: chroma.sqlite3
